# whodis

./: .gitignore  README.md  pyproject.toml
src/tests/: test_deserialise.py  test_deserialises_bulk_string.py  test_deserialises_integer.py  test_deserialises_message.py  test_deserialises_simple_string.py  test_serialise.py  test_server.py
src/whodis/: commands.py  deserialise.py  serialise.py  server.py  shared.py
